--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -24,6 +24,17 @@ body {
     font: 16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
+.hidden {
+    visibility: hidden;
+    position: absolute;
+    width: 0;
+    height: 0;
+}
+
+.d-none {
+    display: none !important;
+}
+
 .container {
     max-width: 1920px;
     margin: 0 auto;
